# CloudMasterApp

./: .eslintrc.cjs  .gitignore  README.md  app.config.js  eslint.config.mjs  nuxt.config.js  nuxt.config.ts  package.json  stylelint.config.js  stylelint.config.mjs
.github/workflows/: rust.yml
app/: app.vue
app/adapters/: instances.js
app/assets/styles/base/: base.scss  container.scss  fonts.scss  helpers.scss  index.scss  transitions.scss
app/assets/styles/base/typography/: index.scss  mixins.scss
app/assets/styles/utils/: typography.scss  variables.scss
app/components/animation/: Fade.vue
app/components/cards/: Instance.vue  Server.vue  Universal.vue  UniversalSkeleton.vue
app/components/common/: CLinkTag.vue  CResize.vue  Dropdown.vue  Floating.vue  Icon.vue  Image.vue  Picture.vue  TagDetect.vue
app/components/layout/Aside/: Navigation.vue  index.vue
app/components/sections/: DynamicCards.vue  Instances.vue  Servers.vue  Settings.vue
app/components/sections/Instances/: Card.vue  index.vue
app/components/sections/Servers/: Card.vue  index.vue
app/components/ui/: Dropdown.vue  DynamicActions.vue  DynamicCards.vue  DynamicSectionHeader.vue  Error.vue  GlowWrapper.vue  SkeletonBlock.vue  Status.vue  UniversalCard.vue
app/components/ui/Glow/: GlowText.vue  GlowWrapper.vue
app/composables/: useDocumentMouseMove.js  useGcloud.js  useRequest.js
app/configs/: cardTypes.js  instanceStatus.js  navigationRoutes.js  sectionFlow.js  statusConfig.js
app/layouts/: default.vue
app/pages/: index.vue  instances.vue  servers.vue  settings.vue
app/plugins/: gsap.js  typograph.js
app/stores/: instances.js  servers.js
app/utils/: helpers.js
server/utils/: rename.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: instances.rs  main.rs  main_old.rs  utils.rs
