[package]
name = "cloud-master"
version = "0.1.0"
description = "An App to manage gcloud servers"
authors = ["NetherG"]
license = ""
repository = "https://github.com/netherguy4/CloudMasterApp"
edition = "2024"
rust-version = "1.90.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
tauri = { version = "2.9.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
anyhow = "1.0.100"
futures = "0.3.31"
google-cloud-compute-v1 = "0.2.0"
google-cloud-gax = "1.2.0"
google-cloud-secretmanager-v1 = "1.1.1"
log = "0.4.28"
env_logger = "0.10"
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["macros"] }
tauri-plugin-clipboard-manager = "2"
